# bumpit

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
src/: config.rs  lib.rs  main.rs  modifier.rs  package.rs  version.rs
